# OnlineJudge

./: .gitignore  Makefile  README.md
docs/: 01-项目概述.md  02-系统架构设计.md  03-数据库设计.md  04-API接口设计.md  05-判题系统设计.md  06-前端设计.md  07-技术栈与工具链.md  07-现代工具链集成-uv与bun.md  08-沙箱技术深入解析.md  09-技术栈确定方案.md  10-项目结构设计.md  11-数据库选择方案.md  DOCKER_INTEGRATION.md  DOCKER_JUDGER.md  DOCKER_SDK_SOLUTION.md  JUDGER_ARCHITECTURE.md  LICENSE  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  STARTUP.md  roadmap.md  task.md
src/backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_judger_simple.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 725895123b5b_initial_migration_with_all_tables.py  7786b4255e7c_add_contest_models.py  ec865aadcdb1_create_submissions_table.py
src/backend/app/: __init__.py
src/backend/app/api/v1/: auth.py  contests.py  problems.py  router.py  submissions.py
src/backend/app/core/: config.py  database.py  deps.py  security.py
src/backend/app/models/: __init__.py  contest.py  problem.py  submission.py  user.py
src/backend/app/schemas/: contest.py  problem.py  response.py  submission.py  user.py
src/backend/app/services/: docker_judge_service.py  judge_service.py  problem_service.py  submission_service.py  user_service.py
src/backend/scripts/: classic_problems.json  create_test_data.py  import_problems.py
src/backend/tests/: __init__.py  conftest.py
src/docker/: README.md  build-images.sh  docker-compose.judger.yml  docker-compose.yml  start-judger.sh
src/docker/images/: cpp.Dockerfile  (+4 more)
src/frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/judger/: __init__.py  celery_app.py  docker_judger.py  languages.py  tasks.py
tests/: test_judger.py  test_multilang.py
(+39 files in other folders)
